# TabPFN-finetuner

./: CLAUDE.md  README.md  flake.nix  pyproject.toml
examples/: basic_finetuning.py
finetuning/: __init__.py  dataset.py  main.py  model.py  trainer.py
tests/: __init__.py  test_dataset.py
