[project]
name = "finetuning"
version = "0.1.0"
description = "Finetuning of TabPFN."
authors = [
    {name = "Felix Jablonski",email = "felix@priorlabs.ai"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.13" # Your Python version requirement
tabpfn = {path = "../TabPFN"}
lightning = ">=2.5.0.post0,<3.0.0"
torchmetrics = ">=1.6.2,<2.0.0"
